--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/fried-rice.html">Fried Rice</a>
+        <a href="./recipes/fried-rice.html">Island Fried Rice</a>
     </body>
 </html>
